# arc

./: .gitignore  manage.py  package-lock.json  pyproject.toml
arc/: asgi.py  settings.py  urls.py  wsgi.py
arc-client/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
arc-client/src/: App.vue  main.js  router.js
arc-client/src/business/: arc.js  time.js  utils.js
arc-client/src/components/: CategoryBreadcrumb.vue  Footer.vue  JsonSchemaForm.vue  LineSelect.vue  Navbar.vue  ProductCard.vue  ProductFilter.vue  ProductList.vue  ProductSpecs.vue  PropertyNumber.vue  PropertyRange.vue  PropertySelect.vue  PropertyString.vue  PropertySwitch.vue  TestSummary.vue
arc-client/src/components/ui/: Alert.vue  Button.vue  (+6 more)
arc-client/src/layouts/: BaseLayout.vue
arc-client/src/views/: About.vue  CheckItem.vue  Error.vue  Index.vue  ManageItem.vue  Product.vue  Products.vue
catalog/: admin.py  apps.py  datatypes.jsonc  models.py  serializers.py  urls.py  views.py
catalog/migrations/: 0001_initial.py  0002_alter_category_parent_alter_category_specs_schema.py  0003_productkind_name_format_alter_category_parent_and_more.py  0004_product_image.py  0005_category_slug.py  0006_productkind_item_name_format_and_more.py
common/: admin.py  exceptions.py  utils.py  validators.py  widgets.py
common/templates/admin/: base.html
inventory/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
inventory/migrations/: 0001_initial.py  0002_item_in_stock.py  0003_alter_item_options_alter_item_product.py  0004_item_out_date_item_specs.py
(+6 files in other folders)
